# tengine-nnie

./: README.md  linux_build.sh
Test/: README.md  inst_alexnet_frcnn_cycle_cpu.cfg  test.sh  test_yu.jpg.rgb
opencv/install19a/include/opencv2/: opencv_modules.hpp
opencv/install19a/lib/: libopencv_imgproc.so.2.4  libopencv_objdetect.so.2.4  libopencv_photo.so.2.4.13
opencv/install19a/lib/pkgconfig/: opencv.pc
source/: CMakeLists.txt  README.md  cmake_install.cmake  linux_build.sh  linux_toolChain.cmake  sample_nnie_plugin.cpp  test_nnie_all.cpp  test_nnie_all.hpp
